# aiutils-sh

./: Cargo.toml  LICENSE  README.md  debug.sh
extras/: aiask  aichat  aicmd  aiedit  aiprompt
src/: api.rs  fs.rs  io.rs  lib.rs  slice.rs
src/api/: complete.rs  embed.rs  mod.rs
