[package]
name = "aituils-sh"
version = "0.1.0"
edition = "2021"
authors = ["Sondre Teigen <sondre.teigen@outlook.com>"]
description = "Shell utilities for operating the OpenAI API"
repository = "https://github.com/sondre-teigen/aiutils-sh"
license = "MIT"
keywords = ["shell", "ai"]
categories = ["command-line-utilities"]

[lib]
crate-type = ["rlib"]

[dependencies]
anyhow = "1.0.95"
base64 = "0.22.1"
clap = { version = "4.5.28", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
subprocess = "0.2.9"
